resolves #20
Para que a scrollbar passe a ficar sempre visível, foi preciso forçar o
webkit, o que faz com que as scrollbars da página em si também fiquem
visíveis.

--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,18 @@
 #pedido {
   width: 25%;
   height: 300px;
-  overflow-y: scroll;
+  overflow: auto;
+}
+
+::-webkit-scrollbar {
+    -webkit-appearance: none;
+    width: 7px;
+}
+
+::-webkit-scrollbar-thumb {
+    border-radius: 4px;
+    background-color: rgba(0,0,0,.5);
+    -webkit-box-shadow: 0 0 1px rgba(255,255,255,.5);
 }
 
 #pedido-feito {
